Fixed some styling issues on mobile and added index.bundle back into my git.

--- a/app/styles/scss/style.scss
+++ b/app/styles/scss/style.scss
@@ -160,6 +160,7 @@ header {
 	position: relative;
 	margin-left: 1px;
 	margin-right: 2px;
+	padding-top: 10px;
 
 	img{
 		max-width: 100%;
@@ -190,6 +191,7 @@ header {
 
 	.back-button{
 		float:right;
+		padding-bottom: 5px;
 	}
 }
 
